// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Transfer > split transfers are retained on child transactions 1`] = `
[
  {
    "account": "one",
    "amount": 5000,
    "category": null,
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "id": "id5",
    "imported_id": null,
    "imported_payee": null,
    "installment_group": null,
    "installment_num": null,
    "installment_total": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id3",
    "payee_name": "",
    "pluggy_bill_id": null,
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": "id6",
  },
  {
    "account": "two",
    "amount": -5000,
    "category": null,
    "cleared": 0,
    "date": 20170101,
    "error": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "installment_group": null,
    "installment_num": null,
    "installment_total": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id2",
    "payee_name": "",
    "pluggy_bill_id": null,
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": "id5",
  },
]
`;

exports[`Transfer > split transfers are retained on child transactions 2`] = `
"- First value
+ Second value

@@ -11,11 +11,11 @@
      "imported_payee": null,
      "installment_group": null,
      "installment_num": null,
      "installment_total": null,
      "is_child": 0,
-     "is_parent": 0,
+     "is_parent": 1,
      "notes": null,
      "parent_id": null,
      "payee": "id3",
      "payee_name": "",
      "pluggy_bill_id": null,"
`;

exports[`Transfer > split transfers are retained on child transactions 3`] = `
"- First value
+ Second value

@@ -26,10 +26,66 @@
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": "id6",
    },
    Object {
+     "account": "one",
+     "amount": 2000,
+     "category": null,
+     "cleared": 1,
+     "date": 20170101,
+     "error": null,
+     "id": "id7",
+     "imported_id": null,
+     "imported_payee": null,
+     "installment_group": null,
+     "installment_num": null,
+     "installment_total": null,
+     "is_child": 1,
+     "is_parent": 0,
+     "notes": null,
+     "parent_id": "id5",
+     "payee": "id2",
+     "payee_name": "",
+     "pluggy_bill_id": null,
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id8",
+   },
+   Object {
+     "account": "one",
+     "amount": -2000,
+     "category": null,
+     "cleared": 0,
+     "date": 20170101,
+     "error": null,
+     "id": "id8",
+     "imported_id": null,
+     "imported_payee": null,
+     "installment_group": null,
+     "installment_num": null,
+     "installment_total": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "notes": null,
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "pluggy_bill_id": null,
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id7",
+   },
+   Object {
      "account": "two",
      "amount": -5000,
      "category": null,
      "cleared": 0,
      "date": 20170101,"
`;

exports[`Transfer > transfers are properly de-categorized 1`] = `
[
  {
    "account": "one",
    "amount": 5000,
    "category": "1",
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "installment_group": null,
    "installment_num": null,
    "installment_total": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Non-transfer",
    "pluggy_bill_id": null,
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Transfer > transfers are properly de-categorized 2`] = `
"- First value
+ Second value

@@ -12,19 +12,47 @@
      "installment_group": null,
      "installment_num": null,
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
-     "notes": null,
+     "notes": "hi",
      "parent_id": null,
-     "payee": "id5",
-     "payee_name": "Non-transfer",
+     "payee": "id4",
+     "payee_name": "",
      "pluggy_bill_id": null,
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": null,
+     "transfer_id": "id7",
+   },
+   Object {
+     "account": "three",
+     "amount": -5000,
+     "category": null,
+     "cleared": 0,
+     "date": 20170101,
+     "error": null,
+     "id": "id7",
+     "imported_id": null,
+     "imported_payee": null,
+     "installment_group": null,
+     "installment_num": null,
+     "installment_total": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "notes": "hi",
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "pluggy_bill_id": null,
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id6",
    },
  ]"
`;

exports[`Transfer > transfers are properly de-categorized 3`] = `
"- First value
+ Second value

@@ -1,10 +1,10 @@
  Array [
    Object {
      "account": "one",
      "amount": 5000,
-     "category": "1",
+     "category": null,
      "cleared": 1,
      "date": 20170101,
      "error": null,
      "id": "id6",
      "imported_id": null,
@@ -14,11 +14,11 @@
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
      "notes": "hi",
      "parent_id": null,
-     "payee": "id4",
+     "payee": "id3",
      "payee_name": "",
      "pluggy_bill_id": null,
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
@@ -26,11 +26,11 @@
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": "id7",
    },
    Object {
-     "account": "three",
+     "account": "two",
      "amount": -5000,
      "category": null,
      "cleared": 0,
      "date": 20170101,
      "error": null,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 1`] = `
[
  {
    "account": "one",
    "amount": 5000,
    "category": null,
    "cleared": 1,
    "date": 20170101,
    "error": null,
    "id": "id6",
    "imported_id": null,
    "imported_payee": null,
    "installment_group": null,
    "installment_num": null,
    "installment_total": null,
    "is_child": 0,
    "is_parent": 0,
    "notes": null,
    "parent_id": null,
    "payee": "id5",
    "payee_name": "Non-transfer",
    "pluggy_bill_id": null,
    "raw_synced_data": null,
    "reconciled": 0,
    "schedule": null,
    "sort_order": 123456789,
    "starting_balance_flag": 0,
    "tombstone": 0,
    "transfer_id": null,
  },
]
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 2`] = `
"- First value
+ Second value

@@ -25,6 +25,62 @@
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": null,
    },
+   Object {
+     "account": "one",
+     "amount": 5000,
+     "category": null,
+     "cleared": 1,
+     "date": 20170101,
+     "error": null,
+     "id": "id7",
+     "imported_id": null,
+     "imported_payee": null,
+     "installment_group": null,
+     "installment_num": null,
+     "installment_total": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "notes": null,
+     "parent_id": null,
+     "payee": "id3",
+     "payee_name": "",
+     "pluggy_bill_id": null,
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id8",
+   },
+   Object {
+     "account": "two",
+     "amount": -5000,
+     "category": null,
+     "cleared": 0,
+     "date": 20170101,
+     "error": null,
+     "id": "id8",
+     "imported_id": null,
+     "imported_payee": null,
+     "installment_group": null,
+     "installment_num": null,
+     "installment_total": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "notes": null,
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "pluggy_bill_id": null,
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id7",
+   },
  ]"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 3`] = `
"- First value
+ Second value

@@ -2,60 +2,60 @@
    Object {
      "account": "one",
      "amount": 5000,
      "category": null,
      "cleared": 1,
-     "date": 20170101,
+     "date": 20170105,
      "error": null,
-     "id": "id6",
+     "id": "id7",
      "imported_id": null,
      "imported_payee": null,
      "installment_group": null,
      "installment_num": null,
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
-     "notes": null,
+     "notes": "This is a note",
      "parent_id": null,
-     "payee": "id5",
-     "payee_name": "Non-transfer",
+     "payee": "id3",
+     "payee_name": "",
      "pluggy_bill_id": null,
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": null,
+     "transfer_id": "id8",
    },
    Object {
      "account": "one",
      "amount": 5000,
      "category": null,
      "cleared": 1,
      "date": 20170101,
      "error": null,
-     "id": "id7",
+     "id": "id6",
      "imported_id": null,
      "imported_payee": null,
      "installment_group": null,
      "installment_num": null,
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
      "notes": null,
      "parent_id": null,
-     "payee": "id3",
-     "payee_name": "",
+     "payee": "id5",
+     "payee_name": "Non-transfer",
      "pluggy_bill_id": null,
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": "id8",
+     "transfer_id": null,
    },
    Object {
      "account": "two",
      "amount": -5000,
      "category": null,
@@ -68,11 +68,11 @@
      "installment_group": null,
      "installment_num": null,
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
-     "notes": null,
+     "notes": "This is a note",
      "parent_id": null,
      "payee": "id2",
      "payee_name": "",
      "pluggy_bill_id": null,
      "raw_synced_data": null,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 4`] = `
"- First value
+ Second value

@@ -14,11 +14,11 @@
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
      "notes": "This is a note",
      "parent_id": null,
-     "payee": "id3",
+     "payee": "id4",
      "payee_name": "",
      "pluggy_bill_id": null,
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
@@ -54,11 +54,11 @@
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": null,
    },
    Object {
-     "account": "two",
+     "account": "three",
      "amount": -5000,
      "category": null,
      "cleared": 0,
      "date": 20170101,
      "error": null,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 5`] = `
"- First value
+ Second value

@@ -14,20 +14,20 @@
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
      "notes": "This is a note",
      "parent_id": null,
-     "payee": "id4",
-     "payee_name": "",
+     "payee": "id9",
+     "payee_name": "Not transferred anymore",
      "pluggy_bill_id": null,
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": "id8",
+     "transfer_id": null,
    },
    Object {
      "account": "one",
      "amount": 5000,
      "category": null,
@@ -52,35 +52,7 @@
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
      "transfer_id": null,
-   },
-   Object {
-     "account": "three",
-     "amount": -5000,
-     "category": null,
-     "cleared": 0,
-     "date": 20170101,
-     "error": null,
-     "id": "id8",
-     "imported_id": null,
-     "imported_payee": null,
-     "installment_group": null,
-     "installment_num": null,
-     "installment_total": null,
-     "is_child": 0,
-     "is_parent": 0,
-     "notes": "This is a note",
-     "parent_id": null,
-     "payee": "id2",
-     "payee_name": "",
-     "pluggy_bill_id": null,
-     "raw_synced_data": null,
-     "reconciled": 0,
-     "schedule": null,
-     "sort_order": 123456789,
-     "starting_balance_flag": 0,
-     "tombstone": 0,
-     "transfer_id": "id7",
    },
  ]"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 6`] = `
"- First value
+ Second value

@@ -14,20 +14,48 @@
      "installment_total": null,
      "is_child": 0,
      "is_parent": 0,
      "notes": "This is a note",
      "parent_id": null,
-     "payee": "id9",
-     "payee_name": "Not transferred anymore",
+     "payee": "id3",
+     "payee_name": "",
      "pluggy_bill_id": null,
      "raw_synced_data": null,
      "reconciled": 0,
      "schedule": null,
      "sort_order": 123456789,
      "starting_balance_flag": 0,
      "tombstone": 0,
-     "transfer_id": null,
+     "transfer_id": "id10",
+   },
+   Object {
+     "account": "two",
+     "amount": -5000,
+     "category": null,
+     "cleared": 0,
+     "date": 20170105,
+     "error": null,
+     "id": "id10",
+     "imported_id": null,
+     "imported_payee": null,
+     "installment_group": null,
+     "installment_num": null,
+     "installment_total": null,
+     "is_child": 0,
+     "is_parent": 0,
+     "notes": "This is a note",
+     "parent_id": null,
+     "payee": "id2",
+     "payee_name": "",
+     "pluggy_bill_id": null,
+     "raw_synced_data": null,
+     "reconciled": 0,
+     "schedule": null,
+     "sort_order": 123456789,
+     "starting_balance_flag": 0,
+     "tombstone": 0,
+     "transfer_id": "id7",
    },
    Object {
      "account": "one",
      "amount": 5000,
      "category": null,"
`;

exports[`Transfer > transfers are properly inserted/updated/deleted 7`] = `
"- First value
+ Second value

@@ -2,66 +2,10 @@
    Object {
      "account": "one",
      "amount": 5000,
      "category": null,
      "cleared": 1,
-     "date": 20170105,
-     "error": null,
-     "id": "id7",
-     "imported_id": null,
-     "imported_payee": null,
-     "installment_group": null,
-     "installment_num": null,
-     "installment_total": null,
-     "is_child": 0,
-     "is_parent": 0,
-     "notes": "This is a note",
-     "parent_id": null,
-     "payee": "id3",
-     "payee_name": "",
-     "pluggy_bill_id": null,
-     "raw_synced_data": null,
-     "reconciled": 0,
-     "schedule": null,
-     "sort_order": 123456789,
-     "starting_balance_flag": 0,
-     "tombstone": 0,
-     "transfer_id": "id10",
-   },
-   Object {
-     "account": "two",
-     "amount": -5000,
-     "category": null,
-     "cleared": 0,
-     "date": 20170105,
-     "error": null,
-     "id": "id10",
-     "imported_id": null,
-     "imported_payee": null,
-     "installment_group": null,
-     "installment_num": null,
-     "installment_total": null,
-     "is_child": 0,
-     "is_parent": 0,
-     "notes": "This is a note",
-     "parent_id": null,
-     "payee": "id2",
-     "payee_name": "",
-     "pluggy_bill_id": null,
-     "raw_synced_data": null,
-     "reconciled": 0,
-     "schedule": null,
-     "sort_order": 123456789,
-     "starting_balance_flag": 0,
-     "tombstone": 0,
-     "transfer_id": "id7",
-   },
-   Object {
-     "account": "one",
-     "amount": 5000,
-     "category": null,
-     "cleared": 1,
      "date": 20170101,
      "error": null,
      "id": "id6",
      "imported_id": null,
      "imported_payee": null,"
`;
